--- a/recap.conf
+++ b/recap.conf
@@ -11,14 +11,24 @@
 #
 #   Homepage:   https://github.com/rackspace/recap/
 #
+
 # If this variable is defined, the reports will be emailed the address 
 # specified in addition to being written to the file system
 MAILTO=
 
-# The ROTATE variable will define how many output files to keep in the rotation. 
-# Files will be rotated each time the script is executed, rather it's from cron
-# or from the command line (default: 7)
-ROTATE=144
+############
+# RECAPLOG #
+############
+# compress old log files
+LOG_COMPRESS=1
+# Log files will be deleted after LOG_EXPIRY days
+LOG_EXPIRY=15
+# should recap send email in case of problems?
+EMAIL_ON_ERROR=1
+# recipients in case of problems
+EMAIL_ON_ERROR_RECIPIENTS="root@localhost"
+# email subject in case of problems
+EMAIL_ON_ERROR_SUBJECT="recaplog error"
 
 ###########
 # REPORTS #
@@ -66,6 +76,8 @@ USEMYSQL=yes
 USEMYSQLPROCESSLIST=yes
 # Provide information on InnoDB (default: no)
 USEINNODB=no
+# display mysql process list in a 'table' or 'vertically'
+MYSQL_PROCESS_LIST=table
 
 # DF REPORT
 # Use "df -h" output. This will show you a trend of disk space available on the drives. (default: no)
@@ -90,3 +102,20 @@ USESLAB=no
 # grep Failed /var/log/secure | sed -e "s/^.*from //g" | sed -e "s/ port.*$//g" | sort -n | uniq -c | sort -nr | head -20
 # pstree -G
 # df -h
+
+# FDISK REPORT
+USEFDISK=no
+
+###########################
+# DEFAULT COMMAND OPTIONS #
+###########################
+OPTS_DF="-x nfs"
+OPTS_FDISK="-l"
+OPTS_FREE=""
+OPTS_IOSTAT="-t -x 1 3"
+OPTS_IOTOP="-b -o -t -n 3"
+OPTS_NETSTAT="-ntulpae"
+OPTS_NETSTAT_SUM="-s"
+OPTS_PS="auxfww"
+OPTS_PSTREE=""
+OPTS_VMSTAT="-S M 1 3"
