--- a/recap.conf
+++ b/recap.conf
@@ -76,7 +76,7 @@ USEMYSQL=yes
 USEMYSQLPROCESSLIST=yes
 # Provide information on InnoDB (default: no)
 USEINNODB=no
-# display mysql process list in a 'table' or 'vertically'
+# display mysql process list in a 'table' or 'vertical'
 MYSQL_PROCESS_LIST=table
 
 # DF REPORT
@@ -105,6 +105,9 @@ USESLAB=no
 
 # FDISK REPORT
 USEFDISK=no
+
+# backup items
+BACKUP_ITEMS="fdisk mysql netstat ps pstree resources"
 
 ###########################
 # DEFAULT COMMAND OPTIONS #
