--- a/recap.conf
+++ b/recap.conf
@@ -66,6 +66,8 @@ USEMYSQL=yes
 USEMYSQLPROCESSLIST=yes
 # Provide information on InnoDB (default: no)
 USEINNODB=no
+# List custom .my.cnf paths, space separated (yes, we support multiple mysql instances :D)
+DOTMYDOTCNF=/root/.my.cnf
 
 # DF REPORT
 # Use "df -h" output. This will show you a trend of disk space available on the drives. (default: no)
