Updated maintainers list.

--- a/recap.conf
+++ b/recap.conf
@@ -6,6 +6,7 @@
 #
 #   Maintainer:     Brent Oswald
 #                   Benjamin Graham
+#                   Simone Soldateschi
 #
 #   License:        GPL 2.0
 #
