Update URLs to point to rackerlabs repo

--- a/recap.conf
+++ b/recap.conf
@@ -10,7 +10,7 @@
 #
 #   License:        GPL 2.0
 #
-#   Homepage:   https://github.com/rackspace/recap/
+#   Homepage:   https://github.com/rackerlabs/recap/
 #
 
 # If this variable is defined, the reports will be emailed the address 
