Added min_free_space to recap.conf, and fixed check

--- a/recap.conf
+++ b/recap.conf
@@ -112,6 +112,9 @@ USEFDISK=no
 # backup items
 BACKUP_ITEMS="fdisk mysql netstat ps pstree resources"
 
+# minimum free disk space in Megabytes
+MIN_FREE_SPACE=0
+
 ###########################
 # DEFAULT COMMAND OPTIONS #
 ###########################
