--- a/recap.conf
+++ b/recap.conf
@@ -115,6 +115,10 @@ BACKUP_ITEMS="fdisk mysql netstat ps pstree resources"
 # minimum free disk space in Megabytes
 MIN_FREE_SPACE=0
 
+# max load - abort if load is higher than this value
+# increase accordingly on multi core servers
+#MAXLOAD=0.8
+
 ###########################
 # DEFAULT COMMAND OPTIONS #
 ###########################
