clarify comments about MAXLOAD

--- a/recap.conf
+++ b/recap.conf
@@ -116,8 +116,9 @@ BACKUP_ITEMS="fdisk mysql netstat ps pstree resources"
 MIN_FREE_SPACE=0
 
 # max load - abort if load is higher than this value
-# increase accordingly on multi core servers
-#MAXLOAD=0.8
+# defaults to the number of logical cores
+# override by setting this to a specifc number
+#MAXLOAD=
 
 ###########################
 # DEFAULT COMMAND OPTIONS #
