Added a check to verify .mylogin.cnf file, if .my.cnf file is not used

--- a/recap.conf
+++ b/recap.conf
@@ -79,6 +79,9 @@ USEMYSQLPROCESSLIST=yes
 USEINNODB=no
 # List custom .my.cnf paths, space separated (yes, we support multiple mysql instances :D)
 DOTMYDOTCNF=/root/.my.cnf
+
+# /root/.mylogin.cnf profile, if /root/.my.cnf is not used
+LOGINPATH=recap
 # display mysql process list in a 'table' or 'vertical'
 MYSQL_PROCESS_LIST=table
 
