Fix to support mutliple DOTMYDOTCNF files using csv.

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -77,7 +77,10 @@ USEMYSQL=yes
 USEMYSQLPROCESSLIST=yes
 # Provide information on InnoDB (default: no)
 USEINNODB=no
-# List custom .my.cnf paths, space separated (yes, we support multiple mysql instances :D)
+# List custom .my.cnf paths, comma or space separated, examples:
+# DOTMYDOTCNF="/root/.my.cnf /root/.my2.cnf" # Space separated within quotes
+# DOTMYDOTCNF=/root/.my.cnf,/root/.my2.cnf   # Comma separated without quotes
+# DOTMYDOTCNF="/root/.my.cnf, /root/.my2 /root/.my3"   # Both within quotes
 DOTMYDOTCNF=/root/.my.cnf
 # display mysql process list in a 'table' or 'vertical'
 MYSQL_PROCESS_LIST=table
