Removing duplicate call of df, changing USEDF default to "yes".

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -86,8 +86,8 @@ DOTMYDOTCNF=/root/.my.cnf
 MYSQL_PROCESS_LIST=table
 
 # DF REPORT
-# Use "df -h" output. This will show you a trend of disk space available on the drives. (default: no)
-USEDF=no
+# Use "df -h" output. This will show you a trend of disk space available on the drives. (default: yes)
+USEDF=yes
 
 # SLABTOP REPORT
 # Use printf "name\tactive\tnum_obj\tobj_size\thuh\n"; tail -n+2 /proc/slabinfo | awk 'size=$3*$4 {print $1"\t"$2"\t"$3"\t"$4"\t"size/1048576}' | sort -k5gr output. This will show you more information on the slab table. (default: no)
