Remove support for multiple my.cnf files, better lock handling.

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -13,7 +13,7 @@
 #   Homepage:   https://github.com/rackerlabs/recap/
 #
 
-# If this variable is defined, the reports will be emailed the address 
+# If this variable is defined, the reports will be emailed the address
 # specified in addition to being written to the file system
 MAILTO=
 
@@ -35,7 +35,7 @@ EMAIL_ON_ERROR_SUBJECT="recaplog error"
 # REPORTS #
 ###########
 
-# PS REPORT 
+# PS REPORT
 # Adds the output of "ps auxww" to a file named ps.log (default: yes)
 USEPS=yes
 
@@ -43,8 +43,8 @@ USEPS=yes
 # This will create a resources.log file with the output of uptime, free, vmstat, and a few other pieces. (default: yes)
 USERESOURCES=yes
 # The following reports all require USERESOURCES to be set to "yes".
-# The following variables can be set to yes or no to enable or disable 
-# specific optional output 
+# The following variables can be set to yes or no to enable or disable
+# specific optional output
 # Use "sar"
 USESAR=no
 # Use "sar -r"
@@ -52,7 +52,7 @@ USESARR=no
 # Use "sar -q"
 USESARQ=no
 # Use "service httpd fullstatus"
-# Please ensure that the Apache is configured to allow access to the 
+# Please ensure that the Apache is configured to allow access to the
 # http://localhost/server-status URL before enabling this option
 USEFULLSTATUS=yes
 
@@ -69,18 +69,15 @@ USENETSTATSUM=no
 
 # MYSQL REPORT
 # Use "mysqladmin status" output. This is required in order to use any of the other MySQL output options.
-# This will create a mysql.log file. Please ensure that the root user's .my.cnf is configured with appropriate 
-# credentials before enabling this option. One way to test this is to run "mysql" in a root shell and see if 
+# This will create a mysql.log file. Please ensure that the root user's .my.cnf is configured with appropriate
+# credentials before enabling this option. One way to test this is to run "mysql" in a root shell and see if
 # you get a "mysql> " prompt. (default: yes)
 USEMYSQL=yes
 # Use "mysqladmin processlist" output.
 USEMYSQLPROCESSLIST=yes
 # Provide information on InnoDB (default: no)
 USEINNODB=no
-# List custom .my.cnf paths, comma or space separated, examples:
-# DOTMYDOTCNF="/root/.my.cnf /root/.my2.cnf" # Space separated within quotes
-# DOTMYDOTCNF=/root/.my.cnf,/root/.my2.cnf   # Comma separated without quotes
-# DOTMYDOTCNF="/root/.my.cnf, /root/.my2 /root/.my3"   # Both within quotes
+# List custom .my.cnf path, default is /root/.my.cnf
 DOTMYDOTCNF=/root/.my.cnf
 # display mysql process list in a 'table' or 'vertical'
 MYSQL_PROCESS_LIST=table
@@ -98,7 +95,7 @@ USESLAB=no
 # tail /var/log/httpd/error_log
 # history
 # service httpd status
-# netstat -antp | awk '$4 ~ /:80$/ {c++;print $5|"cut -f1 -d:|sort |uniq -c|sort -rn |head -10"} END {print c" Total Connections to port 80"}' 
+# netstat -antp | awk '$4 ~ /:80$/ {c++;print $5|"cut -f1 -d:|sort |uniq -c|sort -rn |head -10"} END {print c" Total Connections to port 80"}'
 # tail /var/log/httpd/error_log
 # tail /var/log/messages
 # tail /var/log/mysqld.log
