Adding OPTS_CURL.

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -56,90 +56,90 @@
 ## Report: fdisk
 # USEFDISK - Generage logs from "fdisk ${OPTS_FDISK}"
 # Options can be modified in OPTS_FDISK
-# Example, to enable: USEFDISK=yes
-#USEFDISK=no
+# Example, to enable: USEFDISK="yes"
+#USEFDISK="no"
 
 ## Report: mysql
 # USEMYSQL - Generates logs from "mysqladmin status"
 # makes use of DOTMYDOTCNF.
 # required by: USEMYSQLPROCESSLIST, USEINNODB
-# Example, to enable: USEMYSQL=yes
-#USEMYSQL=no
+# Example, to enable: USEMYSQL="yes"
+#USEMYSQL="no"
 
 # USEMYSQLPROCESSLIST - Generates logs from "mysqladmin processlist"
 # Makes use of DOTMYDOTCNF and MYSQL_PROCESS_LIST
 # requires: USEMYSQL
-# Example, to enable: USEMYSQLPROCESSLIST=yes
-#USEMYSQLPROCESSLIST=no
+# Example, to enable: USEMYSQLPROCESSLIST="yes"
+#USEMYSQLPROCESSLIST="no"
 
 # USEINNODB - Generates logs from "mysql show engine innodb status"
 # Makes use of DOTMYDOTCNF
 # requires: USEMYSQL
-# Example, to enable: USEINNODB=yes
-#USEINNODB=no
+# Example, to enable: USEINNODB="yes"
+#USEINNODB="no"
 
 ## Report: netstat
 # USENETSTAT - Generates network stats from "netstat ${OPTS_NETSTAT}"
 # required by: USENETSTATSUM
-# Example, to disable: USENETSTATSUM=no
-#USENETSTAT=yes
+# Example, to disable: USENETSTATSUM="no"
+#USENETSTAT="yes"
 
 # USENETSTATSUM - Generates logs from "netstat ${OPTS_NETSTAT_SUM}".
 # requires: USENETSTAT
-# Example, to enable: USENETSTATSUM=yes
-#USENETSTATSUM=no
+# Example, to enable: USENETSTATSUM="yes"
+#USENETSTATSUM="no"
 
 ## Report: ps
 # USEPS - Generates logs from "ps"
 # Options can be modified in OTPS_PS
-# Example, to disable: USEPS=no
-#USEPS=yes
+# Example, to disable: USEPS="no"
+#USEPS="yes"
 
 ## Report: pstree
 # USEPSTREE - Generates logs from pstree
 # Options can be modified in OTPS_PSTREE
-# Example, to enable: USEPSTREE=yes
-#USEPSTREE=no
+# Example, to enable: USEPSTREE="yes"
+#USEPSTREE="no"
 
 ## Report: resources
 # USERESOURCES - Generates "resources"(uptime, free, vmstat, iostat, iotop) log
 # required by: USEDF, USESLAB, USESAR, USESARQ, USESARR, USEFULLSTATUS
-# Example, to disable: USERESOURCES=no
-#USERESOURCES=yes
+# Example, to disable: USERESOURCES="no"
+#USERESOURCES="yes"
 
 # USEDF - Generates logs from df
 # requires: USERESOURCES
 # Options can be modified in OPTS_DF
-# Example, to disable: USEDF=no
-#USEDF=yes
+# Example, to disable: USEDF="no"
+#USEDF="yes"
 
 # USESLAB - Generates logs from the slab table.
 # requires: USERESOURCES
-# Example, to enable: USESLAB=yes
-#USESLAB=no
+# Example, to enable: USESLAB="yes"
+#USESLAB="no"
 
 # USERSAR - Generates logs from sar.
 # requires: USERESOURCES
-# Example, to disable: USESAR=no
-#USESAR=yes
+# Example, to disable: USESAR="no"
+#USESAR="yes"
 
 # USESARQ - Generates logs from "sar -q" (logs queue lenght, load data)
 # requires: USERESOURCES
-# Example, to enable: USESARQ=yes
-#USESARQ=no
+# Example, to enable: USESARQ="yes"
+#USESARQ="no"
 
 # USESARR - Generates logs from"sar -r" (logs memory data)
 # requires: USERESOURCES
-# Example, to enable: USESARR=yes
-#USESARR=no
+# Example, to enable: USESARR="yes"
+#USESARR="no"
 
 # USEFULLSTATUS - Performs an http request(GET) to the URL defined in
 # OPTS_STATUSURL. Needs a webserver configured to respond to this request.
 # Nginx(nginx_status) and Apache HTTPD(server-stats) offer this functionality
 # that needs to be enabled.
 # requires: USERESOURCES
-# Example, to enable: USEFULLSTATUS=yes
-#USEFULLSTATUS=no
+# Example, to enable: USEFULLSTATUS="yes"
+#USEFULLSTATUS="no"
 
 ### Options used by the tools generating the reports
 
@@ -148,11 +148,15 @@
 #DOTMYDOTCNF="/root/.my.cnf"
 
 # required by: USEMYSQLPROCESSLIST
-# Example, generate vertical output: MYSQL_PROCESS_LIST=vertical
-#MYSQL_PROCESS_LIST=table
+# Example, generate vertical output: MYSQL_PROCESS_LIST="vertical"
+#MYSQL_PROCESS_LIST="table"
+
+# required by: USEFULLSTATUS
+# Example: OPTS_CURL="-skLv"
+#OPTS_CURL="-Ls"
 
 # required by: USEDF
-# Example: OPTS_DF='-PhT -x nfs'
+# Example: OPTS_DF="-PhT -x nfs"
 #OPTS_DF="-x nfs"
 
 # required by: USEFDISK
@@ -160,7 +164,7 @@
 #OPTS_FDISK="-l"
 
 # required by: USEFREE
-# Example: OPTS_FREE='-lwt'
+# Example: OPTS_FREE="-lwt"
 #OPTS_FREE=""
 
 # required by: USERESOURCES
@@ -190,8 +194,8 @@
 #OPTS_PSTREE="-p"
 
 # required by: USEFULLSTATUS
-# Example: OPTS_STATUSURL=http://localhost/nginx_status
-#OPTS_STATUSURL=http://localhost:80/
+# Example: OPTS_STATUSURL="http://localhost/nginx_status"
+#OPTS_STATUSURL="http://localhost:80/"
 
 # required by: USERESOURCES
 # used by "vmstat"
