--- a/src/recap.conf
+++ b/src/recap.conf
@@ -42,11 +42,13 @@
 # Example: MAILTO="user@example.com"
 #MAILTO=""
 
-# Minimum free space (in MB) required in ${BASEDIR} to run recap
+# MIN_FREE_SPACE - Minimum free space (in MB) required in ${BASEDIR} to
+# run recap, a value of 0 deactivates this check.
 # Example, ensure there are at least 5MB: MIN_FREE_SPACE=5
 #MIN_FREE_SPACE=0
 
-# Maximum load allowed to run recap, abort if load is higher than this value
+# MAXLOAD - Maximum load allowed to run recap, abort if load is higher
+# than this value.
 # Example, don't run recap if server load is above 4: MAXLOAD=4
 #MAXLOAD=10
 
@@ -54,7 +56,7 @@
 ### recap Reports
 
 ## Report: fdisk
-# USEFDISK - Generage logs from "fdisk ${OPTS_FDISK}"
+# USEFDISK - Generates logs from "fdisk ${OPTS_FDISK}"
 # Options can be modified in OPTS_FDISK
 # Example, to enable: USEFDISK="yes"
 #USEFDISK="no"
@@ -62,7 +64,7 @@
 ## Report: mysql
 # USEMYSQL - Generates logs from "mysqladmin status"
 # makes use of DOTMYDOTCNF.
-# required by: USEMYSQLPROCESSLIST, USEINNODB
+# Required by: USEMYSQLPROCESSLIST, USEINNODB
 # Example, to enable: USEMYSQL="yes"
 #USEMYSQL="no"
 
@@ -80,7 +82,7 @@
 
 ## Report: netstat
 # USENETSTAT - Generates network stats from "netstat ${OPTS_NETSTAT}"
-# required by: USENETSTATSUM
+# Required by: USENETSTATSUM
 # Example, to disable: USENETSTATSUM="no"
 #USENETSTAT="yes"
 
@@ -103,7 +105,7 @@
 
 ## Report: resources
 # USERESOURCES - Generates "resources"(uptime, free, vmstat, iostat, iotop) log
-# required by: USEDF, USESLAB, USESAR, USESARQ, USESARR, USEFULLSTATUS
+# Required by: USEDF, USESLAB, USESAR, USESARQ, USESARR, USEFULLSTATUS
 # Example, to disable: USERESOURCES="no"
 #USERESOURCES="yes"
 
@@ -143,61 +145,78 @@
 
 ### Options used by the tools generating the reports
 
-# required by: USEMYSQL, USEMYSQLPROCESSLIST, USEINNODB
+# DOTMYDOTCNF - Defines the path to the mysql client configuration file
+# Required by: USEMYSQL, USEMYSQLPROCESSLIST, USEINNODB
 # Example: DOTMYDOTCNF="/root/.my_alternative.cnf"
 #DOTMYDOTCNF="/root/.my.cnf"
 
-# required by: USEMYSQLPROCESSLIST
+# MYSQL_PROCESS_LIST - Format  to  display MySQL process list, options are
+# "table" or  "vertical".  This  requires  that  USEMYSQLPROCESSLIST be set
+# "yes".
+# Required by: USEMYSQLPROCESSLIST
 # Example, generate vertical output: MYSQL_PROCESS_LIST="vertical"
 #MYSQL_PROCESS_LIST="table"
 
-# required by: USEFULLSTATUS
+# OPTS_CURL - Options used by curl, when using USEFULLSTATUS
+# Required by: USEFULLSTATUS
 # Example: OPTS_CURL="-skLv"
 #OPTS_CURL="-Ls"
 
-# required by: USEDF
+# OPTS_DF - df options
+# Required by: USEDF
 # Example: OPTS_DF="-PhT -x nfs"
 #OPTS_DF="-x nfs"
 
-# required by: USEFDISK
+# OPTS_FDISK - Option used by USEFDISK.
+# Required by: USEFDISK
 # Example: OPTS_FDISK="-o gpt -l"
 #OPTS_FDISK="-l"
 
-# required by: USEFREE
+# OPTS_FREE - free options
+# Required by: USEFREE
 # Example: OPTS_FREE="-lwt"
 #OPTS_FREE=""
 
-# required by: USERESOURCES
+# OPTS_IOSTAT - iostat options
+# Required by: USERESOURCES
 # used by "iostat"
 # Example: OPTS_IOSTAT="-Ntx 3 3"
 #OPTS_IOSTAT="-t -x 1 3"
 
-# required by: USERESOURCES
+# OPTS_IOTOP - iotop options
+# Required by: USERESOURCES
 # used by "iotop"
 # Example: OPTS_IOTOP="-botqn3 -d3"
 #OPTS_IOTOP="-b -o -t -n 3"
 
-# required by: USENETSTAT
+# OPTS_NETSTAT - netstat options
+# Required by: USENETSTAT
 # Example: OPTS_NETSTAT="-punteCola"
 #OPTS_NETSTAT="-ntulpae"
 
-# required by: USENETSTATSUM
+# OPTS_NETSTAT_SUM - netstat statistics options
+# Required by: USENETSTATSUM
 # Example: OPTS_NETSTAT_SUM="-stuUSw"
 #OPTS_NETSTAT_SUM="-s"
 
-# required by: USEPS
+# OPTS_PS - ps options
+# Required by: USEPS
 # Example: OPTS_PS="-Laef"
 #OPTS_PS="auxfww"
 
-# required by: USEPSTREE
+# OPTS_PSTREE - pstree options
+# Required by: USEPSTREE
 # Example: OPTS_PSTREE="-cApu"
 #OPTS_PSTREE="-p"
 
-# required by: USEFULLSTATUS
+# OPTS_STATUSURL - URL to perform the http request  when USEFULLSTATUS is
+# enabled
+# Required by: USEFULLSTATUS
 # Example: OPTS_STATUSURL="http://localhost/nginx_status"
 #OPTS_STATUSURL="http://localhost:80/"
 
-# required by: USERESOURCES
+# OPTS_VMSTAT - vmstat options
+# Required by: USERESOURCES
 # used by "vmstat"
 # Example: OPTS_VMSTAT="-aSM 3 3"
 #OPTS_VMSTAT="-S M 1 3"
