Deprecating netstat with nstat in the summary report.

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -86,7 +86,7 @@
 # Example, to disable: USENETSTATSUM="no"
 #USENETSTAT="yes"
 
-# USENETSTATSUM - Generates logs from "netstat ${OPTS_NETSTAT_SUM}".
+# USENETSTATSUM - Generates logs from "nstat ${OPTS_NETSTAT_SUM}".
 # requires: USENETSTAT
 # Example, to enable: USENETSTATSUM="yes"
 #USENETSTATSUM="no"
@@ -194,10 +194,10 @@
 # Example: OPTS_NETSTAT="-punteCola"
 #OPTS_NETSTAT="-ntulpae"
 
-# OPTS_NETSTAT_SUM - netstat statistics options
+# OPTS_NETSTAT_SUM - nstat options
 # Required by: USENETSTATSUM
-# Example: OPTS_NETSTAT_SUM="-stuUSw"
-#OPTS_NETSTAT_SUM="-s"
+# Example: OPTS_NETSTAT_SUM="-z"
+#OPTS_NETSTAT_SUM="-a"
 
 # OPTS_PS - ps options
 # Required by: USEPS
