Deprecating netstat with ss in the network(netsat) report.

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -81,7 +81,7 @@
 #USEINNODB="no"
 
 ## Report: netstat
-# USENETSTAT - Generates network stats from "netstat ${OPTS_NETSTAT}"
+# USENETSTAT - Generates network stats from "ss ${OPTS_NETSTAT}"
 # Required by: USENETSTATSUM
 # Example, to disable: USENETSTATSUM="no"
 #USENETSTAT="yes"
@@ -189,10 +189,10 @@
 # Example: OPTS_IOTOP="-botqn3 -d3"
 #OPTS_IOTOP="-b -o -t -n 3"
 
-# OPTS_NETSTAT - netstat options
+# OPTS_NETSTAT - ss options
 # Required by: USENETSTAT
-# Example: OPTS_NETSTAT="-punteCola"
-#OPTS_NETSTAT="-ntulpae"
+# Example: OPTS_NETSTAT="-atunompie"
+#OPTS_NETSTAT="-atunp"
 
 # OPTS_NETSTAT_SUM - nstat options
 # Required by: USENETSTATSUM
