Deprecate the use of OPT_CURL in favor of OPTS_LINKS

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -157,10 +157,10 @@
 # Example, generate vertical output: MYSQL_PROCESS_LIST="vertical"
 #MYSQL_PROCESS_LIST="table"
 
-# OPTS_CURL - Options used by curl, when using USEFULLSTATUS
+# OPTS_LINKS- Options used by links, when using USEFULLSTATUS
 # Required by: USEFULLSTATUS
-# Example: OPTS_CURL="-skLv"
-#OPTS_CURL="-Ls"
+# Example: OPTS_LINKS="-dump -width 120 -codepage iso-8859-2"
+#OPTS_LINKS="-dump"
 
 # OPTS_DF - df options
 # Required by: USEDF
@@ -213,7 +213,7 @@
 # enabled
 # Required by: USEFULLSTATUS
 # Example: OPTS_STATUSURL="http://localhost/nginx_status"
-#OPTS_STATUSURL="http://localhost:80/"
+#OPTS_STATUSURL="http://localhost:80/server-status"
 
 # OPTS_VMSTAT - vmstat options
 # Required by: USERESOURCES
