Add support to multiple mysql config files.

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -140,9 +140,12 @@
 
 ### Options used by the tools generating the reports
 
-# DOTMYDOTCNF - Defines the path to the mysql client configuration file
+# DOTMYDOTCNF - Defines the path(s) to the mysql client configuration file
+# uses a comma separated list of config files.  No need to define any path
+# for plesk, automatically will attempt to use plesk db config file if found.
+# NOTE: Spaces in filenames are not supported.
 # Required by: USEMYSQL, USEMYSQLPROCESSLIST, USEINNODB
-# Example: DOTMYDOTCNF="/root/.my_alternative.cnf"
+# Example: DOTMYDOTCNF="/root/.my_alternative.cnf,/root/.my_second.cnf"
 #DOTMYDOTCNF="/root/.my.cnf"
 
 # MYSQL_PROCESS_LIST - Format  to  display MySQL process list, options are
