--- a/src/recap.conf
+++ b/src/recap.conf
@@ -21,6 +21,10 @@
 # Example, to log in a different location: BASEDIR="/opt/recap"
 #BASEDIR="/var/log/recap"
 
+# LIBDIR - Directory where the functions are located.
+# Example, to use a different location: LIBDIR="/opt/recap/lib"
+#LIBDIR="/usr/lib/recap"
+
 # BACKUP_ITEMS - Is the list of reports generated and used by recap scripts
 # Example, just enable network stats: BACKUP_ITEMS="netstat"
 #BACKUP_ITEMS="fdisk mysql netstat ps pstree resources"
