Adding plugin support and an example of a plugin.

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -138,6 +138,10 @@
 # Example, to enable: USEFULLSTATUS="yes"
 #USEFULLSTATUS="no"
 
+# USEPLUGINS - Enables the use of plugins, loaded from LIBDIR/plugins-enabled
+# Example, to enable: USEPLUGINS="yes"
+#USEPLUGINS="no"
+
 ### Options used by the tools generating the reports
 
 # DOTMYDOTCNF - Defines the path(s) to the mysql client configuration file
