--- a/src/recap.conf
+++ b/src/recap.conf
@@ -100,7 +100,7 @@
 
 ## Report: resources
 # USERESOURCES - Generates "resources"(uptime, free, vmstat, iostat, iotop) log
-# Required by: USEDF, USESLAB, USESAR, USESARQ, USESARR, USEFULLSTATUS
+# Required by: USEDF, USESLAB, USESAR, USESARQ, USESARR
 # Example, to disable: USERESOURCES="no"
 #USERESOURCES="yes"
 
@@ -130,14 +130,6 @@
 # Example, to enable: USESARR="yes"
 #USESARR="no"
 
-# USEFULLSTATUS - Performs an http request(GET) to the URL defined in
-# OPTS_STATUSURL. Needs a webserver configured to respond to this request.
-# Nginx(nginx_status) and Apache HTTPD(server-stats) offer this functionality
-# that needs to be enabled.
-# requires: USERESOURCES
-# Example, to enable: USEFULLSTATUS="yes"
-#USEFULLSTATUS="no"
-
 # USEPLUGINS - Enables the use of plugins, loaded from LIBDIR/plugins-enabled
 # Example, to enable: USEPLUGINS="yes"
 #USEPLUGINS="no"
@@ -158,11 +150,6 @@
 # Required by: USEMYSQLPROCESSLIST
 # Example, generate vertical output: MYSQL_PROCESS_LIST="vertical"
 #MYSQL_PROCESS_LIST="table"
-
-# OPTS_LINKS- Options used by links, when using USEFULLSTATUS
-# Required by: USEFULLSTATUS
-# Example: OPTS_LINKS="-dump -width 120 -codepage iso-8859-2"
-#OPTS_LINKS="-dump"
 
 # OPTS_DF - df options
 # Required by: USEDF
@@ -210,12 +197,6 @@
 # Required by: USEPSTREE
 # Example: OPTS_PSTREE="-cApu"
 #OPTS_PSTREE="-p"
-
-# OPTS_STATUSURL - URL to perform the http request  when USEFULLSTATUS is
-# enabled
-# Required by: USEFULLSTATUS
-# Example: OPTS_STATUSURL="http://localhost/nginx_status"
-#OPTS_STATUSURL="http://localhost:80/server-status"
 
 # OPTS_VMSTAT - vmstat options
 # Required by: USERESOURCES
