--- a/.travis.yml
+++ b/.travis.yml
@@ -43,14 +43,14 @@ install:
       --detach \
       --rm \
       --tty \
-      --name recap_on_${DISTRO} \
+      --name recap_on_${DISTRO/:/_} \
       --mount type=bind,src="$(pwd)",dst=/recap \
       ${DISTRO}
-  - docker exec recap_on_${DISTRO} /recap/tests/install_deps.sh ${DISTRO}
+  - docker exec recap_on_${DISTRO/:/_} /recap/tests/install_deps.sh ${DISTRO}
 
 script:
-  - docker exec recap_on_${DISTRO} /recap/tests/test_install_recap.sh
-  - docker exec recap_on_${DISTRO} recap
-  - docker exec recap_on_${DISTRO} cat /var/log/recap/recap.log
+  - docker exec recap_on_${DISTRO/:/_} /recap/tests/test_install_recap.sh
+  - docker exec recap_on_${DISTRO/:/_} recap
+  - docker exec recap_on_${DISTRO/:/_} cat /var/log/recap/recap.log
 
 ...
