--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,8 @@ install:
 
 script:
   - docker exec recap_on_${DISTRO/:/_} /recap/tests/test_install_recap.sh
-  - docker exec recap_on_${DISTRO/:/_} recap
+  # For testing recap should exit immediately if an error occurs
+  - docker exec recap_on_${DISTRO/:/_} bash -c 'sed -i "2iset -e" $(which recap); recap'
   - docker exec recap_on_${DISTRO/:/_} cat /var/log/recap/recap.log
 
 ...
