Fix issue with running iotop in container (use host network stack and give extended privileges)

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,8 @@ install:
       --detach \
       --rm \
       --tty \
+      --privileged \
+      --network=host \
       --name recap_on_${DISTRO/:/_} \
       --mount type=bind,src="$(pwd)",dst=/recap \
       ${DISTRO}
