--- a/src/recap.conf
+++ b/src/recap.conf
@@ -120,7 +120,7 @@
 # Example, to disable: USESAR="no"
 #USESAR="yes"
 
-# USESARQ - Generates logs from "sar -q" (logs queue lenght, load data)
+# USESARQ - Generates logs from "sar -q" (logs queue length, load data)
 # requires: USERESOURCES
 # Example, to enable: USESARQ="yes"
 #USESARQ="no"
