--- a/src/utils/recaplog.service.in
+++ b/src/utils/recaplog.service.in
@@ -5,5 +5,6 @@ After=network-online.target
 Wants=network-online.target
 
 [Service]
+Environment=BINDIR=/usr/local/bin
 Type=oneshot
-ExecStart=@BINDIR@/recaplog
+ExecStart=/bin/sh -c "${BINDIR}/recaplog"
