--- a/src/utils/recap.service.in
+++ b/src/utils/recap.service.in
@@ -1,6 +1,6 @@
 [Unit]
 Description=recap
-Documentation=man:recap(5) man:recap(8)
+Documentation=man:recap.conf(5) man:recap(8)
 After=network-online.target
 Wants=network-online.target
 
