--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,10 @@ install:
 
 script:
   - docker exec recap_on_${DISTRO/:/_} bash -c 'recap --version'
+  - docker exec recap_on_${DISTRO/:/_} bash -c 'recaplog --version'
   - docker exec recap_on_${DISTRO/:/_} /recap/tests/run_recap.sh
   - docker exec recap_on_${DISTRO/:/_} bash -c 'ls -tr /var/log/recap/*log | xargs tail -v -n+0'
+  - docker exec recap_on_${DISTRO/:/_} /recap/tests/run_recaplog.sh
+  - docker exec recap_on_${DISTRO/:/_} bash -c 'tail -v -n+0 /var/log/recap/recaplog.log'
 
 ...
