Update iotop default to include -P

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -175,8 +175,8 @@
 # OPTS_IOTOP - iotop options
 # Required by: USERESOURCES
 # used by "iotop"
-# Example: OPTS_IOTOP="-botqn3 -d3"
-#OPTS_IOTOP="-b -o -t -n 3"
+# Example: OPTS_IOTOP="-Pbotqn3 -d3"
+#OPTS_IOTOP="-P -b -o -t -n 3"
 
 # OPTS_NETSTAT - ss options
 # Required by: USENETSTAT
