--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ matrix:
     - name: "CentOS 7"
       env:
         - DISTRO='centos:7'
+    - name: "CentOS 8"
+      env:
+        - DISTRO='centos:8'
     - name: "Ubuntu 14.04 (trusty)"
       env:
         - DISTRO='ubuntu:14.04'
