Add USEMYSQLFULLPROCESSLIST option to mysql plugin

--- a/src/recap.conf
+++ b/src/recap.conf
@@ -59,7 +59,7 @@
 ## Report: mysql
 # USEMYSQL - Generates logs from "mysqladmin status"
 # makes use of DOTMYDOTCNF.
-# Required by: USEMYSQLPROCESSLIST, USEINNODB
+# Required by: USEMYSQLPROCESSLIST, USEMYSQLFULLPROCESSLIST, USEINNODB
 # Example, to enable: USEMYSQL="yes"
 #USEMYSQL="no"
 
@@ -68,6 +68,12 @@
 # requires: USEMYSQL
 # Example, to enable: USEMYSQLPROCESSLIST="yes"
 #USEMYSQLPROCESSLIST="no"
+
+# USEMYSQLFULLPROCESSLIST - Generates logs from "mysqladmin -v processlist"
+# Makes use of DOTMYDOTCNF and MYSQL_PROCESS_LIST
+# requires: USEMYSQL
+# Example, to enable: USEMYSQLFULLPROCESSLIST="yes"
+#USEMYSQLFULLPROCESSLIST="no"
 
 # USEINNODB - Generates logs from "mysql show engine innodb status"
 # Makes use of DOTMYDOTCNF
@@ -145,9 +151,9 @@
 #DOTMYDOTCNF="/root/.my.cnf"
 
 # MYSQL_PROCESS_LIST - Format  to  display MySQL process list, options are
-# "table" or  "vertical".  This  requires  that  USEMYSQLPROCESSLIST be set
-# "yes".
-# Required by: USEMYSQLPROCESSLIST
+# "table" or  "vertical".  This  requires  that  USEMYSQLPROCESSLIST and/or
+# USEMYSQLFULLPROCESSLIST set to "yes".
+# Required by: USEMYSQLPROCESSLIST, USEMYSQLFULLPROCESSLIST
 # Example, generate vertical output: MYSQL_PROCESS_LIST="vertical"
 #MYSQL_PROCESS_LIST="table"
 
