--- a/.github/workflows/test_distros.yml
+++ b/.github/workflows/test_distros.yml
@@ -21,6 +21,8 @@ jobs:
             registry: mirror.gcr.io/library/ubuntu:22.04
           - name: "ubuntu_20.04"
             registry: mirror.gcr.io/library/ubuntu:20.04
+          - name: "debian_12"
+            registry: mirror.gcr.io/library/debian:bookworm
           - name: "debian_11"
             registry: mirror.gcr.io/library/debian:bullseye
           - name: "fedora_latest"
